# syra_gui

./: .gitattributes  .gitignore  README.md  __init__.py  main.c  mira_evaluation_notebook.ipynb  mira_installer.py  pyproject.toml  radar_eval_notebook.ipynb  radar_gui_starter.py  requirements.txt  start_mira.py  start_mira_gui.sh  sykno_cli  test.py  test_fahrrad.py
.ipynb_checkpoints/: mira_evaluation_notebook-checkpoint.ipynb
Core/Inc/: clock_config.h  dma_handler.h  gpio_handler.h  json_config.h  main.h  radar_sensor.h  spi_handler.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  system_config.h  usb_handler.h
Core/Src/: clock_config.c  dma_handler.c  gpio_handler.c  json_config.c  main.c  radar_sensor.c  spi_handler.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  (+1 more)
Src/: clock_config.cyclo  clock_config.d  clock_config.su  dma_handler.cyclo  dma_handler.d  dma_handler.su  gpio_handler.cyclo  gpio_handler.d  gpio_handler.su  json_config.cyclo  json_config.d  json_config.su  main.cyclo  main.d  main.su  radar_sensor.cyclo  radar_sensor.d  radar_sensor.su  spi_handler.cyclo  spi_handler.d  spi_handler.su  stm32h7xx_hal_msp.cyclo  stm32h7xx_hal_msp.d  stm32h7xx_hal_msp.su  stm32h7xx_it.cyclo  stm32h7xx_it.d  stm32h7xx_it.su  subdir.mk  system_stm32h7xx.d  usb_handler.cyclo  usb_handler.d  usb_handler.su
Startup/: subdir.mk
docker/: Dockerfile  sykno_gui_dockerfile
docs/: export_diagrams.py  mira_system_diagrams.gaphor
mira/: README.md
sykno_env/: pyvenv.cfg
sykno_radar_eval_project/: README.md  install_eval_gui.sh  sykno_radar_eval_notebook.ipynb
tools/: rm.py
(+170 files in other folders)
