# how to setup a good pyproject.toml file:
# https://github.com/python-poetry/poetry/blob/master/pyproject.toml

[tool.poetry]
name = "sykno"
version = "0.1.0"
description = "virtuel env for Sykno projects"

authors = ["Paatsch Jan-Philipp <janphilipp.paatsch@fau.de>",
            "Michler Fabian <michler@sykno-rf.de>",
            "Scheiner Benedict <scheiner@sykno-rf.de>"]

maintainers = ["Paatsch Jan-Philipp <janphilipp.paatsch@fau.de>",
               "Michler Fabian <michler@sykno-rf.de>",
               "Scheiner Benedict <scheiner@sykno-rf.de>"]

readme = "README.md"

homepage = "https://www.sykno-rf.de"

repository = "https://gitlab.com/sykno/fp_jan_py.git"

license = ""

# poetry config virtualenvs.in-project true

[tool.poetry.dependencies]
python = ">=3.9 < 3.12"
setuptools = "^65.6.3"
poetry-core = "^1.4.0"
poetry-plugin-export = "^1.2.0"
loguru = "^0.6.0"
click = "^8.1.3"
matplotlib = "^3.5.1"
pathlib = "^1.0.1"
saleae = "^0.12.0"
pandas = "^1.4.3"
seaborn = "^0.12.0"
h5py = "^3.9.0"
numpy = "^1.23.2"
scipy = "^1.9.3"
pyusb = "^1.2.1"
pyserial = "^3.5"
path = "^16.6.0"
ft4222 = "^1.7.0"
pyqt5-tools = "^5.15"
PyQt5 = "^5.15.9"
pyqtgraph = "^0.13.1"

#sykno = {git = "https://gitlab.com/sykno/fp_jan_py.git", branch="master"}
paramiko = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"